--- a/app/sass/main.scss
+++ b/app/sass/main.scss
@@ -451,7 +451,7 @@ svg {
 	.contact-us-row {
 		padding: 0;
 	}
-	.nav__link {
+	/*.nav__link {
 		display: none;
 		height: auto;
 	}
@@ -468,7 +468,7 @@ svg {
         height: 30px;  
         display: inline-block;  
         position: absolute;
-	}
+	}*/
 }
 
 @media screen and (max-width: 767px) {
