--- a/app/scss/main.scss
+++ b/app/scss/main.scss
@@ -1,32 +1,12 @@
-@font-face {
-  font-family: 'Roboto';
-  font-style: normal;
-  font-weight: 300;
-  src: local('Roboto Light'), local('Roboto-Light'),
-       url('../fonts/roboto-v18-cyrillic_cyrillic-ext_latin_latin-ext-300.woff2') format('woff2'), 
-       url('../fonts/roboto-v18-cyrillic_cyrillic-ext_latin_latin-ext-300.woff') format('woff'); 
-}
-@font-face {
-  font-family: 'Roboto';
-  font-style: normal;
-  font-weight: 400;
-  src: local('Roboto'), local('Roboto-Regular'),
-       url('../fonts/roboto-v18-cyrillic_cyrillic-ext_latin_latin-ext-regular.woff2') format('woff2'), 
-       url('../fonts/roboto-v18-cyrillic_cyrillic-ext_latin_latin-ext-regular.woff') format('woff'); 
-}
-@font-face {
-  font-family: 'Roboto';
-  font-style: normal;
-  font-weight: 700;
-  src: local('Roboto Bold'), local('Roboto-Bold'),
-       url('../fonts/roboto-v18-cyrillic_cyrillic-ext_latin_latin-ext-700.woff2') format('woff2'), 
-       url('../fonts/roboto-v18-cyrillic_cyrillic-ext_latin_latin-ext-700.woff') format('woff'); 
-}
+@import 'mixins.scss';
+@import 'typo.scss';
+@import 'grid.scss';
+@import 'carousels.scss';
 
 *,
 *::before,
 *::after {
-  box-sizing: border-box;
+  	box-sizing: border-box;
 }
 
 html {
@@ -35,23 +15,7 @@ html {
 
 body {
 	font-family: 'Roboto', sans-serif;
-	line-height: 30px; // зачем выставлять такой line-height?
-}
-
-.clearfix:before,
-.clearfix:after {
-   content: "";
-   display: table;
-}
-.clearfix:after {
-   clear: both;
-}
-
-.container {
-	width: 100%;
-	max-width: 1170px;
-	margin: 0 auto;
-	padding: 0 15px;
+	line-height: 30px;
 }
 
 .section{
@@ -75,59 +39,34 @@ body {
 	padding: 0 0 120px;
 }
 
-h1,
-h2,
-h3,
-h4,
-h5,
-h6 {
-	margin: 0;
-	line-height: normal;
-}
-
-.row {
-	margin: 0 -15px;
-}
-
-
-.row:before,
-.row:after {
-   content: "";
-   display: table;
-}
-.row:after {
-   clear: both;
-}
-
-.figures-row {
-	margin: 0 -15px;
-}
-
-.figures-row__item {
-	float: left;
-	width: 33.3333%;
-	padding: 0 15px 85px;
-}
-
 .figure {
 	text-align: center;
 	margin: 0 15px 85px;
-}
 
-.figure img {
-	height: 57px;
-	margin-bottom: 20px;
-}
+	&__image {
+		height: 57px;
+		margin-bottom: 20px;
 
-.figure__title {
-	font-size: 18px;
-	font-weight: bold;
-	margin: 0;
-}
+		svg {
+			height: 57px;
+			fill: #530086;
+		}
 
-.figure__text {
-	color: gray;
-	font-size: 16px;
+		img {
+			max-height: 100%;
+		}
+	}
+
+	&__title {
+		font-size: 18px;
+		font-weight: bold;
+		margin: 0;
+	}
+
+	&__text {
+		color: gray;
+		font-size: 16px;
+	}
 }
 
 .title--regular {
@@ -144,19 +83,94 @@ h6 {
 }
 
 .header {
-	padding: 40px 0;
+	position: relative;
+	margin-bottom: 40px;
+}
+
+.menu-btn {
+	position: relative;
+	float: right;
+	width: 42px;
+	height: 32px;
+	margin-right: 15px;
+	cursor: pointer;
+
+	span {
+		position: absolute;
+		left: 0;
+		width: 100%;
+		height: 4px;
+		background-color: #fff;
+		transition: .3s;
+
+		&:first-child {
+			top: 0;
+		}
+
+		&:nth-child(2) {
+			top: 14px;
+		}
+
+		&:last-child {
+			bottom: 0;
+		}
+	}
+
+	&.is-open {
+		span {
+			&:first-child {
+				transform: rotate(45deg) translateY(20px);
+			}
+
+			&:nth-child(2) {
+				opacity: 0;
+				visibility: hidden;
+			}
+
+			&:last-child {
+				transform: rotate(-45deg) translateY(-20px);
+			}
+		}
+	}
+
+	@media (min-width: 768px) {
+		display: none;
+	}
 }
 
 .nav {
-	float: right;
+	display: none;
+	position: absolute;
+	left: -15px;
+	top: 100%;
+	width: calc(100% + 30px);
+	padding: 5px 15px;
 	color: white;
-	height: 46px;
-	max-width: calc(100% - 200px);
+	background-color: rgba(0,0,0,0.7);
+
+	& > a {
+		display: block;
+	}
+
+	@media (min-width: 768px) {
+		display: block !important;
+		position: static;
+		float: right;
+		height: 46px;
+		width: auto;
+		max-width: calc(100% - 200px);
+		background-color: transparent;
+
+		& > a {
+			display: inline-block;
+		}
+	}
 }
 
 .header__logo {
  	float: left;
  	width: 200px;
+ 	margin-left: 15px;
  }
 
 .header__logo img {
@@ -191,6 +205,10 @@ h6 {
 	background-color: #04a35d;
 }
 
+.section-header {
+	padding: 40px 0 0;
+}
+
 .section-header__title {
 	color: white;
 	font-weight: normal;
@@ -220,11 +238,6 @@ h6 {
 	display: inline-block;
 }
 
-.section__col {
-	float: left;
-	width: 50%;
-}
-
 .block-image {
 	height: auto;
 	width: 100%;
@@ -237,7 +250,6 @@ h6 {
 .about-us__button {
 	padding: 37px 0 0;
 }
-
 
 .gallery {
 	margin-bottom: 60px;
@@ -396,90 +408,33 @@ h6 {
 	resize: none;
 }
 
-svg {
-	fill: #530086; // цвет заливки будет задан всем svg - это плохо ((
-}
 
-[class*="col-"] {
-	float:left;
-	width: 100%;
-}
-
-.person-carousel {
-	width: 400px;
-	margin: auto;
-}
-
-.person-carousel__item {
-	width: 45px !important;
-	height: 45px;
-	margin: 20px 0;
-	border-radius: 50%;
-	background-position: center;
-	background-size: cover;
-	transition: .3s;
-}
-
-.person-carousel .slick-arrow {
-	position: absolute;
-	top: 50%;
-	width: 20px;
-	height: 20px;
-	transform: translateY(-50%);
-	background-color: transparent;
-	font-size: 0;
-	border: 0;
-	background-position: center;
-	background-size: contain;
-}
-
-.person-carousel .slick-prev {
-	left: -40px;
-	background-image: url('../img/icons/back.png');
-}
-
-.person-carousel .slick-next {
-	right: -40px;
-	background-image: url('../img/icons/next.png');
-}
-
-.person-carousel .slick-current {
-	
-}
 
 @media screen and (max-width: 576px) {
 	.contact-us-row {
 		padding: 0;
 	}
-	/*.nav__link {
+	/* .nav__link {
 		display: none;
 		height: auto;
 	}
 	.nav__menu {
 		display: block;
-        width: 100%;  
-        position: relative;
-        color: white;
-        text-decoration: none;
+	        width: 100%;  
+	        position: relative;
+	        color: white;
+	        text-decoration: none;
 	}
 	.nav__menu:after {  
-        content:""; 
-        width: 30px;  
-        height: 30px;  
-        display: inline-block;  
-        position: absolute;
-	}*/
+	        content:""; 
+	        width: 30px;  
+	        height: 30px;  
+	        display: inline-block;  
+	        position: absolute;
+	} */
 }
 
 @media screen and (max-width: 767px) {
-	.col-half {
-		width: 100%;
-	}
-
-	.col-third, .col-fourth {
-		width: 50%;
-	}
-
 	.contact-form {
 		padding: 0;
 	}
@@ -494,18 +449,6 @@ svg {
 }
 
 @media (min-width: 768px) {
-	.col-half {
-		width: 50%;
-	}
-
-	.col-third {
-		width: 33.3333%;
-	}
-
-	.col-fourth {
-		width: 25%;
-	}
-
 	.city-info--regular-left {
 		padding-left: 30px;
 	}
