--- a/app/scss/_grid.scss
+++ b/app/scss/_grid.scss
@@ -6,9 +6,13 @@
 }
 
 .row {
-	margin: 0 -15px;
+	margin: 0;
 
 	@include clearfix;
+
+	@media (min-width: 768px) {
+		margin: 0 -15px;
+	}
 }
 
 .figures-row {
@@ -49,5 +53,11 @@
 	
 	@media (min-width: 768px) {
 		width: 25%;
+	}
+}
+
+.col-s-half {
+	@media (max-width: 768px) {
+		width: 50%;
 	}
 }
