--- a/app/scss/main.scss
+++ b/app/scss/main.scss
@@ -1,461 +1,11 @@
 @import 'mixins.scss';
 @import 'typo.scss';
 @import 'grid.scss';
+@import 'all.scss';
+@import 'button.scss';
+@import 'header.scss';
+@import 'city.scss';
+@import 'review.scss';
 @import 'carousels.scss';
-
-*,
-*::before,
-*::after {
-  	box-sizing: border-box;
-}
-
-html {
-	font-family: sans-serif;
-}
-
-body {
-	font-family: 'Roboto', sans-serif;
-	line-height: 30px;
-}
-
-.section{
-	padding: 60px 0;
-}
-
-.section-header {
-	min-height: 100vh;
-	margin: 0 0 60px;
-	background-image: linear-gradient(to right,#22b977,#015183), url(../img/background/solar-panels.jpg);
-	background-blend-mode: multiply; 
-	background-size: cover;
-}
-
-.section-advantages {
-	padding-top: 60px;
-	margin-bottom: -25px;
-}
-
-.our-project {
-	padding: 0 0 120px;
-}
-
-.figure {
-	text-align: center;
-	margin: 0 15px 85px;
-
-	&__image {
-		height: 57px;
-		margin-bottom: 20px;
-
-		svg {
-			height: 57px;
-			fill: #530086;
-		}
-
-		img {
-			max-height: 100%;
-		}
-	}
-
-	&__title {
-		font-size: 18px;
-		font-weight: bold;
-		margin: 0;
-	}
-
-	&__text {
-		color: gray;
-		font-size: 16px;
-	}
-}
-
-.title--regular {
-	padding-bottom: 56px;
-}
-
-.about-us__text {
-	color: gray;
-}
-
-.title {
-	font-size: 36px;
-	font-weight: normal;
-}
-
-.header {
-	position: relative;
-	margin-bottom: 40px;
-}
-
-.menu-btn {
-	position: relative;
-	float: right;
-	width: 42px;
-	height: 32px;
-	margin-right: 15px;
-	cursor: pointer;
-
-	span {
-		position: absolute;
-		left: 0;
-		width: 100%;
-		height: 4px;
-		background-color: #fff;
-		transition: .3s;
-
-		&:first-child {
-			top: 0;
-		}
-
-		&:nth-child(2) {
-			top: 14px;
-		}
-
-		&:last-child {
-			bottom: 0;
-		}
-	}
-
-	&.is-open {
-		span {
-			&:first-child {
-				transform: rotate(45deg) translateY(20px);
-			}
-
-			&:nth-child(2) {
-				opacity: 0;
-				visibility: hidden;
-			}
-
-			&:last-child {
-				transform: rotate(-45deg) translateY(-20px);
-			}
-		}
-	}
-
-	@media (min-width: 768px) {
-		display: none;
-	}
-}
-
-.nav {
-	display: none;
-	position: absolute;
-	left: -15px;
-	top: 100%;
-	width: calc(100% + 30px);
-	padding: 5px 15px;
-	color: white;
-	background-color: rgba(0,0,0,0.7);
-
-	& > a {
-		display: block;
-	}
-
-	@media (min-width: 768px) {
-		display: block !important;
-		position: static;
-		float: right;
-		height: 46px;
-		width: auto;
-		max-width: calc(100% - 200px);
-		background-color: transparent;
-
-		& > a {
-			display: inline-block;
-		}
-	}
-}
-
-.header__logo {
- 	float: left;
- 	width: 200px;
- 	margin-left: 15px;
- }
-
-.header__logo img {
-	max-width: 100%;
-	height: 46px;
-
-}
-
-.nav__link {
-	text-decoration:none;
-	color: white;
-	padding-right: 27px;
-}
-
-.nav__link:hover {
-	color: #b7c8cb;
-}
-
-.nav__link:active {
-	color: #005083;
-}
-
-.nav__menu {
-	display: none;
-}
-
-.button:hover {
-	background-color: #07b569;
-}
-
-.button:active {
-	background-color: #04a35d;
-}
-
-.section-header {
-	padding: 40px 0 0;
-}
-
-.section-header__title {
-	color: white;
-	font-weight: normal;
-	font-size: 54px;
-	text-align: center;
-	padding: 25vh 0;
-	max-width: 910px;
-    margin: auto;
-}
-
-.button {
-	background-color: #22b977;
-	border:0;
-	height: 46px;
-	text-align: center;
-	width: 200px;
-	color: white;
-	font-size: 16px;
-	font-weight: bold;
-	cursor: pointer;
-}
-
-.header__button {
-	width: 140px;
-	text-decoration: none;
-	line-height: 46px;
-	display: inline-block;
-}
-
-.block-image {
-	height: auto;
-	width: 100%;
-}
-
-.about-us {
-	padding-left: 95px;
-}
-
-.about-us__button {
-	padding: 37px 0 0;
-}
-
-.gallery {
-	margin-bottom: 60px;
-}
-
-.our-project__link {
-	float: left;
-	width: 25%;
-	min-height: 1px;
-}
-
-.gallery__bg-image {
-	padding-bottom: 22%;
-	background-position: 50%;
-	background-size: cover;
-}
-
-.button--centered {
-	display: block;
-	text-align: center;
-	margin: auto;
-}
-
-.button--modal {
-	margin-top: 20px;
-}
-
-.review-section {
-	background: linear-gradient(to right, #015183, #22b977);
-	padding: 94px 0;
-	text-align: center;
-	color: white;
-}
-
-.quote__icon {
-	text-align: center;
-	padding: 0 0 42px;
-}
-
-.quote__icon img {
-	height: 26px;
-	width: 29px;	
-}
-
-.review__text {
-	margin: auto;
-	font-size: 16px;
-	max-width: 770px;
-	padding: 0 0 41px;
-}
-
-.review__person {
-	text-transform: uppercase;
-}
-
-.review__name {
-	font-size: 14px;
-}
-
-.review__post {
-	font-size: 13px;
-	font-weight: lighter;
-}
-
-.contact-us {
-	padding: 0 100px;
-}
-
-.contact-us__title{
-	text-align: center;
-	margin-bottom: 79px;
-}
-
-.form-group {
-	margin-bottom: 20px;
-}
-
-.contact-form__field {
-	padding: 0 25px;
-	font-weight: lighter;
-	width: 100%;
-	height: 45px;
-}
-
-.contact-form {
-	padding-left: 20px;
-}
-
-.city-row {
-	padding-right: 45px;
-}
-
-.map {
-	width: 100%;
-	height: 270px; 
-	border:0;
-}
-
-.city-info {
-	
-}
-
-.city-info__title{
-	font-size: 18px;
-}
-
-.city-info__lines {
-	margin-top: 40px;
-}
-
-.city-info__line{
-	font-size: 14px;
-}
-
-.city-info__line--gray {
-	color: gray;
-}
-
-.city-info--regular-right {
-	padding-right: 115px;
-}
-
-.map-container {
-	margin-top: 20px;
-}
-
-.footer{
-	background-image: url(../img/background/solar-footer.jpg);
-	background-color: #015183;
-	background-blend-mode: multiply; 
-	background-size: cover;
-	margin-top: 60px;
-	padding: 110px 0;
-	color: white;
-}
-
-.section-footer__city {
-	width: 50%;
-	padding-left: 15px;
-	float: left;
-}
-
-.footer-row {
-
-}
-
-.container h3 {
-	font-size: 18px;
-	margin-bottom: 46px;
-}
-
-.textteria {
-	height: 140px;
-	padding-top: 20px;
-	margin-bottom: 40px;
-	resize: none;
-}
-
-
-
-@media screen and (max-width: 576px) {
-	.contact-us-row {
-		padding: 0;
-	}
-	/* .nav__link {
-		display: none;
-		height: auto;
-	}
-	.nav__menu {
-		display: block;
-	        width: 100%;  
-	        position: relative;
-	        color: white;
-	        text-decoration: none;
-	}
-	.nav__menu:after {  
-	        content:""; 
-	        width: 30px;  
-	        height: 30px;  
-	        display: inline-block;  
-	        position: absolute;
-	} */
-}
-
-@media screen and (max-width: 767px) {
-	.contact-form {
-		padding: 0;
-	}
-
-	.about-us__row, .city-row, .footer {
-	padding: 0;
-	}
-
-	.our-project__bg-image {
-		padding-bottom: 44%;
-	}
-}
-
-@media (min-width: 768px) {
-	.city-info--regular-left {
-		padding-left: 30px;
-	}
-}
-
-@media screen and (max-width: 992px) {
-	.city-info--regular-right {
-		padding-right: 15px;
-	}
-}
+@import 'contact.scss';
+@import 'footer.scss';
