--- a/app/scss/_city.scss
+++ b/app/scss/_city.scss
@@ -6,8 +6,17 @@
 
 	&__lines {
 		margin-top: 20px;
+
 		@media (min-width: 768px) {
 			margin-top: 40px;
+		}
+
+		&--s-air {
+			margin-bottom: 10px;
+
+			@media (min-width: 768px) {
+				margin-bottom: 0;
+			}
 		}
 	}
 
