--- a/app/scss/_contact.scss
+++ b/app/scss/_contact.scss
@@ -16,9 +16,11 @@
 }
 
 .contact-form {
+	margin-top: 10px;
 
 	@media (min-width: 768px) {
 		padding-left: 20px;
+		margin-top: 0;
 	}
 
 	&__field {
